refactor: remove otel agent in Dockerfile
since we are installing the opentelemetry operator in kubernetes we dont
need this anymore